--- a/vrs/templates/movie.html
+++ b/vrs/templates/movie.html
@@ -28,11 +28,13 @@
   .genre {
     font-size: 1.5rem;
     color: whitesmoke;
+    white-space: nowrap;
   }
-
+  
   .duration {
     font-size: 1.5rem;
     color: whitesmoke;
+    white-space: nowrap;
   }
 
   .year {
@@ -45,7 +47,7 @@
     color: whitesmoke;
   }
 
-  .col-7   > * {
+  .rbuy   > * {
     margin: 0.2rem;
     height: 100%;
     width: 23%;
@@ -55,6 +57,15 @@
     /* background-color: #343a40;  */
   }
 
+  .main-cast {
+    padding-top: 35px; 
+  }
+  .nicecast {
+    font-size: 1.2rem;
+    color: whitesmoke;
+    white-space: nowrap;
+  }
+
 </style>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -62,7 +73,7 @@
 <div id="bg">
   <div class="content">
     <h1 class="title">{{movie.movie_title}}</h1>
-    <div class="row">
+    <div class="row" style = "display: flex;">
       <div class="col-1">
         <p class="genre">{{movie.movie_genre}}</p>
       </div>
@@ -81,11 +92,21 @@
     </div>
     <!-- to make buttons to rent and buy movies -->
     <div class="row">
-      <div class="col-7 ">
+      <div class="col-7 rbuy">
         <button type="button" class="btn btn-dark btn-lg">Rent ₹{{movie.movie_rent_price}} </button>
         <button type="button" class="btn btn-dark btn-lg">Buy ₹{{movie.movie_buy_price}}</button>
-        <a style = "width: 10%;" type="button"  class="btn btn-dark btn-lg" href="/add_to_cart/{{movie.movie_id}}" ><i class="fas fa-cart-plus"  style="scale: 1.25;"></i></a>
+        <a style = "width: 10%;" type="button" class="btn btn-dark btn-lg" href="/add_to_cart/{{movie.movie_id}}" ><i class="fas fa-cart-plus"  style="scale: 1.25;"></i></a>
       </div>
+    </div>
+    <!-- to display cast properly -->
+    <div class="row main-cast">
+        <div class="col-1"  style="max-width: 6.8%; padding-right: 0px">
+          <p class="nicecast heado" style="color: rgb(169, 169, 169)">Starring: </p>
+        </div>
+        <div class="col-1" style="padding-left: 2px">
+          <p class="nicecast">{{movie.movie_cast}}</p>
+        </div>
+    </div>
   </div>
 </div>
   {% endblock body %}
