--- a/vrs/templates/index.html
+++ b/vrs/templates/index.html
@@ -97,8 +97,17 @@
         margin-left: 4px;
         }
     </style>
+    {% for message in messages  %}            
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          <strong>Message : </strong> {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+    {% endfor %}  
 </head>
 <body>
+      
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
