--- a/vrs/templates/signup.html
+++ b/vrs/templates/signup.html
@@ -84,8 +84,18 @@
         margin-left: 4px;
         }
     </style>
+    {% for message in messages  %}            
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          <strong>Message : </strong> {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+    {% endfor %} 
 </head>
+
 <body>
+       
 <div class="container">
     {% if form.errors %}
     <p> There are some errors in the form. Please correct them and try again.</p>
